Better fix for horizontal scrolling

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -4,6 +4,7 @@
 html, body{
 	height: 100%;
 	font-family: 'Roboto'; font-weight: 300;
+	overflow-x: hidden;
 }
 h1, h2, h3, h4{
 	font-family: 'Raleway'; font-weight: 200;
@@ -17,9 +18,6 @@ p{
 }
 header h1{
 	margin-top: 8px;
-}
-.row{
-	margin-right: 0px;
 }
 .inline{
 	display: inline;
